<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kr.sofac.handsometalk.view.fragments.InfoFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:background="#e8d8be"
        android:scaleType="fitStart"
        android:src="@drawable/image_info_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="150dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/background_area_style"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:padding="5dp"

                card_view:cardCornerRadius="5dp"
                card_view:cardElevation="3dp"
                card_view:contentPadding="5dp">

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/about_me_for_me_text"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="fill_horizontal"
                            android:text="@string/text_1_about" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:layout_marginTop="10dp"
                            android:gravity="center_horizontal"
                            android:text="@string/why_event_me"
                            android:textColor="@color/colorBlack"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="fill_horizontal"
                            android:text="@string/about_me_text2" />



                    </LinearLayout>

                </ScrollView>


            </android.support.v7.widget.CardView>

        </LinearLayout>
    </LinearLayout>


</FrameLayout>
