<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/id_layout_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@drawable/side_nav_bar"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:theme="@style/ThemeOverlay.AppCompat.Dark">

        <ImageView
            android:id="@+id/id_image_user"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:src="@drawable/avatar" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingTop="10dp">

            <TextView
                android:id="@+id/id_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

            <TextView
                android:id="@+id/id_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_naver_com" />

        </LinearLayout>

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/id_sign_in_background"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_header_height"
        android:background="@color/colorDarkTransparent"
        android:gravity="center_vertical|center_horizontal"
        android:paddingTop="15dp">

        <TextView
            android:id="@+id/id_sign_in_button_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/border_textview"
            android:gravity="center_horizontal|center_vertical"
            android:paddingBottom="12dp"
            android:paddingEnd="25dp"
            android:paddingStart="25dp"
            android:paddingTop="12dp"
            android:text="@string/sign_in"
            android:textColor="@color/colorWhite"
            android:textSize="18sp" />
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>